bk_ida/gccida/c1/insert_save
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:1168:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *save_mode) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:1163:10: error: conflicting types for 'insert_save'
__int64  insert_save( 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:91:12: note: previous declaration is here
static int insert_save                  PARAMS ((struct insn_chain *, int, int,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:1234:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = ( ( unsigned int)( mode_class_0[v17] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:1251:32: error: use of undeclared identifier 'machine_mode'
v16 = adjust_address_1( v16, ( machine_mode)v17, 0LL, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/caller-save.c:1257:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_REG( ( machine_mode)*( ( unsigned __int8 *)v16 + 2), v7); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_save/src/obj/caller-save.o] Error 1
